--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "eslint": "eslint --ext .js src/",
     "start": "node ./src/service/service.js",
     "server": "nodemon ./src/service/service.js -- --server",
-    "start-front-server": "nodemon ./src/express/index.js"
+    "start-front-server": "nodemon ./src/express/index.js",
+    "debug": "LOG_LEVEL=debug DEBUG=app:start-request node -r pino-debug test/lessons/pino/server.js | ./node_modules/.bin/pino-pretty"
   },
   "repository": {
     "type": "git",
@@ -21,14 +22,19 @@
   },
   "homepage": "https://github.com/deniolp/505149-buy-and-sell-3#readme",
   "devDependencies": {
+    "debug": "4.1.1",
     "eslint": "6.8.0",
     "eslint-config-htmlacademy": "0.5.2",
     "nodemon": "2.0.2",
+    "pino-debug": "1.3.0",
+    "pino-pretty": "4.0.0",
     "pug-lint": "2.6.0"
   },
   "dependencies": {
     "chalk": "3.0.0",
     "express": "4.17.1",
+    "express-pino-logger": "5.0.0",
+    "pino": "6.2.0",
     "pug": "2.0.4"
   }
 }
