--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Куплю. Продам",
   "main": "./src/service/service.js",
   "scripts": {
-    "test": "npm run eslint",
+    "test": "jest",
     "eslint": "eslint --ext .js src/",
     "start": "node ./src/service/service.js",
     "server": "nodemon ./src/service/service.js -- --server",
@@ -25,10 +25,12 @@
     "debug": "4.1.1",
     "eslint": "6.8.0",
     "eslint-config-htmlacademy": "0.5.2",
+    "jest": "26.0.1",
     "nodemon": "2.0.2",
     "pino-debug": "1.3.0",
     "pino-pretty": "4.0.0",
-    "pug-lint": "2.6.0"
+    "pug-lint": "2.6.0",
+    "supertest": "4.0.2"
   },
   "dependencies": {
     "chalk": "3.0.0",
