--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "chalk": "3.0.0",
+    "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-pino-logger": "5.0.0",
     "pino": "6.2.0",
