--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-pino-logger": "5.0.0",
+    "nanoid": "3.1.10",
     "pino": "6.2.0",
     "pug": "2.0.4"
   }
