Using pino for making logs

--- a/.gitignore
+++ b/.gitignore
@@ -10,12 +10,10 @@ Thumbs.db
 # Вспомогательные файлы
 *.log*
 node_modules/
+test/
+coverage/
+mocks.json
+.env
 
 # Папка с собранными файлами проекта
 build/
-
-test/
-
-mocks.json
-
-.env
