--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "npm run eslint && npm run test::rest",
     "test::rest": "jest",
     "eslint": "eslint --ext .js src/",
-    "start": "node ./src/service/service.js",
-    "server": "nodemon ./src/service/service.js -- --server",
+    "start": "node ./src/service/service.js | pino-pretty",
+    "server": "nodemon ./src/service/service.js -- --server | pino-pretty",
     "start-front-server": "nodemon ./src/express/index.js",
     "debug": "LOG_LEVEL=debug DEBUG=app:start-request node -r pino-debug test/lessons/pino/server.js | ./node_modules/.bin/pino-pretty"
   },
