--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test::rest": "jest",
     "eslint": "eslint --ext .js src/",
     "start": "node ./src/service/service.js | pino-pretty",
-    "server": "nodemon ./src/service/service.js -- --server | pino-pretty",
+    "server": "LOG_LEVEL=debug nodemon ./src/service/service.js -- --server | pino-pretty",
     "start-front-server": "nodemon ./src/express/index.js",
     "debug": "LOG_LEVEL=debug DEBUG=app:start-request node -r pino-debug test/lessons/pino/server.js | ./node_modules/.bin/pino-pretty"
   },
