--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "supertest": "4.0.2"
   },
   "dependencies": {
+    "axios": "0.19.2",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "nanoid": "3.1.10",
