--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "test::rest": "jest",
     "eslint": "eslint --ext .js src/",
     "help": "node ./src/service/service.js",
-    "start": "LOG_LEVEL=error nodemon ./src/service/service.js -- --server",
-    "start::debug": "LOG_LEVEL=debug nodemon ./src/service/service.js -- --server",
-    "start-front-server": "nodemon ./src/express/index.js"
+    "start": "LOG_LEVEL=error nodemon -q ./src/service/service.js -- --server | pino-pretty -t SYS:standard -i hostname,pid -l true > ./src/logs/server.log",
+    "start::debug": "LOG_LEVEL=debug nodemon ./src/service/service.js -- --server | pino-pretty -t SYS:standard -i hostname,pid -l true",
+    "start-front-server": "LOG_LEVEL=error nodemon -q ./src/express/index.js | pino-pretty -t SYS:standard -i hostname,pid -l true > ./src/logs/front.log",
+    "start-front-server::debug": "LOG_LEVEL=debug nodemon ./src/express/index.js | pino-pretty -t SYS:standard -i hostname,pid,nodemon -l true",
+    "dev": "concurrently \"npm run start\" \"npm run start-front-server\"",
+    "dev::debug": "concurrently \"npm run start::debug\" \"npm run start-front-server::debug\""
   },
   "repository": {
     "type": "git",
@@ -23,13 +26,13 @@
   },
   "homepage": "https://github.com/deniolp/505149-buy-and-sell-3#readme",
   "devDependencies": {
+    "concurrently": "5.2.0",
     "debug": "4.1.1",
     "eslint": "6.8.0",
     "eslint-config-htmlacademy": "0.5.2",
     "jest": "26.0.1",
     "nodemon": "2.0.2",
     "pino-debug": "1.3.0",
-    "pino-multi-stream": "5.0.0",
     "pino-pretty": "4.0.0",
     "pug-lint": "2.6.0",
     "supertest": "4.0.2"
