--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "axios": "0.19.2",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "formidable": "1.2.2",
     "nanoid": "3.1.10",
     "pino": "6.2.0",
     "pug": "2.0.4"
