Correcting generate (image's src)

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "npm run eslint && npm run test::rest",
     "test::rest": "jest",
     "eslint": "eslint --ext .js src/",
-    "help": "node ./src/service/service.js",
+    "help": "node ./src/service/service.js --help | pino-pretty -t SYS:standard -i hostname,pid -l true",
+    "generate": "node ./src/service/service.js --generate",
     "start": "LOG_LEVEL=error nodemon -q ./src/service/service.js -- --server | pino-pretty -t SYS:standard -i hostname,pid -l true > ./src/logs/server.log",
     "start::debug": "LOG_LEVEL=debug nodemon ./src/service/service.js -- --server | pino-pretty -t SYS:standard -i hostname,pid -l true",
     "start-front-server": "LOG_LEVEL=error nodemon -q ./src/express/index.js | pino-pretty -t SYS:standard -i hostname,pid -l true > ./src/logs/front.log",
