--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "debug": "4.1.1",
     "eslint": "6.8.0",
     "eslint-config-htmlacademy": "0.5.2",
+    "intl": "1.2.5",
     "jest": "26.0.1",
     "nodemon": "2.0.2",
     "pino-debug": "1.3.0",
