--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "main": "./src/service/service.js",
   "scripts": {
     "test": "npm run eslint && npm run test::rest",
-    "test::rest": "jest | pino-pretty -t SYS:standard -i hostname,pid -l true",
+    "test::rest": "jest",
     "eslint": "eslint --ext .js src/",
-    "help": "node ./src/service/service.js --help | pino-pretty -t SYS:standard -i hostname,pid -l true",
+    "help": "node ./src/service/service.js --help",
     "generate": "node ./src/service/service.js --generate",
-    "start": "LOG_LEVEL=error nodemon -q ./src/service/service.js -- --server | pino-pretty -t SYS:standard -i hostname,pid -l true > ./src/logs/server.log",
-    "start::debug": "LOG_LEVEL=debug nodemon ./src/service/service.js -- --server | pino-pretty -t SYS:standard -i hostname,pid -l true",
-    "start-front-server": "LOG_LEVEL=error nodemon -q ./src/express/index.js | pino-pretty -t SYS:standard -i hostname,pid -l true > ./src/logs/front.log",
-    "start-front-server::debug": "LOG_LEVEL=debug nodemon ./src/express/index.js | pino-pretty -t SYS:standard -i hostname,pid,nodemon -l true",
+    "start": "LOG_LEVEL=error nodemon -q ./src/service/service.js -- --server > ./src/logs/server.log",
+    "start-front-server": "LOG_LEVEL=error nodemon -q ./src/express/index.js > ./src/logs/front.log",
+    "start::debug": "LOG_LEVEL=debug nodemon ./src/service/service.js -- --server",
+    "start-front-server::debug": "LOG_LEVEL=debug nodemon ./src/express/index.js",
     "dev": "concurrently \"npm run start\" \"npm run start-front-server\"",
-    "dev::debug": "concurrently \"npm run start::debug\" \"npm run start-front-server::debug\""
+    "dev::debug": "COLOR=true concurrently \"npm run start::debug\" \"npm run start-front-server::debug\""
   },
   "repository": {
     "type": "git",
