--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "nanoid": "3.1.10",
     "pg": "8.3.0",
     "pino": "6.2.0",
-    "pug": "2.0.4"
+    "pug": "2.0.4",
+    "sequelize": "6.3.5"
   }
 }
