Implementing filldb cli command

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint": "eslint --ext .js src/",
     "help": "node ./src/service/service.js --help",
     "generate": "node ./src/service/service.js --generate",
+    "filldb": "cross-env NODE_ENV=development COLOR=true node ./src/service/service.js --filldb",
     "version": "node ./src/service/service.js --version",
     "start": "cross-env NODE_ENV=production nodemon -q ./src/service/service.js -- --server",
     "start::debug": "cross-env NODE_ENV=development COLOR=true nodemon ./src/service/service.js -- --server",
