--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "cross-env": "7.0.2",
     "dotenv": "8.2.0",
     "express": "4.17.1",
-    "formidable": "1.2.2",
+    "multer": "1.4.2",
     "nanoid": "3.1.10",
     "pg": "8.3.0",
     "pino": "6.2.0",
