--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "bcrypt": "5.0.1",
     "connect-session-sequelize": "7.1.1",
     "cross-env": "7.0.2",
+    "csurf": "1.11.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-session": "1.17.2",
