--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start-front-server": "cross-env NODE_ENV=production IS_FRONT=true nodemon -q ./src/express/index.js",
     "start-front-server::debug": "cross-env NODE_ENV=development COLOR=true IS_FRONT=true nodemon ./src/express/index.js",
     "dev": "concurrently \"npm run start\" \"npm run start-front-server\"",
-    "dev::debug": "concurrently \"npm run start::debug\" \"npm run start-front-server::debug\""
+    "dev::debug": "concurrently --names \"BACK, FRONT\" -c \"bgGreen.bold,bgMagenta.bold\" \"npm run start::debug\" \"npm run start-front-server::debug\""
   },
   "repository": {
     "type": "git",
