--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "pg": "8.3.0",
     "pino": "6.2.0",
     "pug": "2.0.4",
-    "sequelize": "6.3.5"
+    "sequelize": "6.3.5",
+    "socket.io": "4.5.3"
   }
 }
