--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "eslint-config-htmlacademy": "0.5.2",
     "intl": "1.2.5",
     "jest": "26.0.1",
-    "nodemon": "2.0.2",
     "pino-debug": "1.3.0",
     "pino-pretty": "4.0.0",
     "pug-lint": "2.6.0",
@@ -59,6 +58,7 @@
     "pug": "2.0.4",
     "sequelize": "6.3.5",
     "socket.io": "4.5.3",
-    "concurrently": "5.2.0"
+    "concurrently": "5.2.0",
+    "nodemon": "2.0.2"
   }
 }
