--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "intl": "1.2.5",
     "jest": "26.0.1",
     "pino-debug": "1.3.0",
-    "pino-pretty": "4.0.0",
     "pug-lint": "2.6.0",
     "supertest": "4.0.2"
   },
@@ -59,6 +58,7 @@
     "sequelize": "6.3.5",
     "socket.io": "4.5.3",
     "concurrently": "5.2.0",
-    "nodemon": "2.0.2"
+    "nodemon": "2.0.2",
+    "pino-pretty": "4.0.0"
   }
 }
