--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "axios": "0.19.2",
     "bcrypt": "5.0.1",
+    "concurrently": "5.2.0",
     "connect-session-sequelize": "7.1.1",
     "cross-env": "7.0.2",
     "csurf": "1.11.0",
@@ -48,17 +49,16 @@
     "express": "4.17.1",
     "express-session": "1.17.2",
     "helmet": "4.6.0",
+    "intl": "1.2.5",
     "joi": "17.4.2",
     "multer": "1.4.2",
     "nanoid": "3.1.10",
+    "nodemon": "2.0.2",
     "pg": "8.3.0",
-    "pino": "6.2.0",
+    "pino": "^6.11.3",
+    "pino-pretty": "^5.0.2",
     "pug": "2.0.4",
     "sequelize": "6.3.5",
-    "socket.io": "4.5.3",
-    "concurrently": "5.2.0",
-    "nodemon": "2.0.2",
-    "pino-pretty": "4.0.0",
-    "intl": "1.2.5"
+    "socket.io": "4.5.3"
   }
 }
